# generator-rust-clap

./: .gitignore  Cargo.toml  README.md  flake.nix  rouge_edges.md  schema.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  emit.rs  lib.rs  naming.rs  schema.rs  tags.rs
tests-host/: Cargo.toml
tests-host/tests/: generation.rs
