# Host-side test crate. Lives outside the plugin's wasm-only target so
# integration tests can run on the developer's host. The harness (and
# `forge-host`'s wasmtime runtime) build and load the plugin's `.wasm`
# from `..`.

[package]
name = "generator-rust-clap-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
forge-test-harness = "0.1.9"
forge-ir = "0.1.9"
forge-host = "0.1.9"
serde_json = "1"
once_cell = "1"
